2020-10-01  Youenn Fablet  <youenn@apple.com>

        Add AVAssetWriter SPI header
        https://bugs.webkit.org/show_bug.cgi?id=217169
        <rdar://problem/69793050>

        Reviewed by Eric Carlson.

        No change of behavior, include SPI header instead of private SDK header.

        * platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm:

2020-10-01  Youenn Fablet  <youenn@apple.com>

        RealtimeMediaSource should ignore ideal values outside the min/max range
        https://bugs.webkit.org/show_bug.cgi?id=217178

        Reviewed by Eric Carlson.

        Make valueForDiscreteCapabilityValues returns an Optional in case no valid value can be selected from the constraint.
        This basically means the constraint will be ignored.
        Before the patch, in case of no valid value, 0 will be set, which is a bad value for sample rate.

        Test: fast/mediastream/audio-bad-sampleRate.html

        * platform/mediastream/MediaConstraints.h:
        (WebCore::NumericConstraint::valueForDiscreteCapabilityValues const):
        * platform/mediastream/RealtimeMediaSource.cpp:
        (WebCore::applyNumericConstraint):

2020-10-01  Youenn Fablet  <youenn@apple.com>

        getUserMedia with sampleRate constraints may fail
        https://bugs.webkit.org/show_bug.cgi?id=217147
        <rdar://problem/69831144>

        Reviewed by Eric Carlson.

        In case of new capture, make sure to reset sample rate and volume to default values.
        This ensures that a sample rate that will fail the capture will not stick for other pages.
        Manually tested.

        * platform/mediastream/mac/BaseAudioSharedUnit.cpp:
        (WebCore::BaseAudioSharedUnit::prepareForNewCapture):

2020-10-01  Adrian Perez de Castro  <aperez@igalia.com>

        Unreviewed. Add missing guard around ModernPath usage.

        No new tests needed.

        * layout/integration/LayoutIntegrationRunIterator.cpp: Add ENABLE(LAYOUT_FORMATTING_CONTEXT)